# idk

./: .gitignore  README.md
back/: Cargo.toml  package.json  tsconfig.json
back/src/: actions.ts  commands.rs  config.ts  db.ts  inventory.rs  inventory.ts  item.rs  item.ts  main.rs  main.ts  player.ts  requests.ts  tests.rs  types.ts  worker.ts  world.rs
back/src/inventory/: helper.ts  inventory.rs  inventory.ts  item.ts  mod.rs  optimize.ts  player.rs
back/src/model/: db.ts
back/src/routes/: main.ts
back/src/types/: config.ts  orders.ts  types.ts
back/src/work/: actions.ts  chests.ts  player.ts  worker.ts
front/: package.json  rollup.config.js  tailwind.config.js
front/public/: global.css
front/src/: App.svelte  DepositPage.svelte  InventoryPage.svelte  Item.svelte  ItemPage.svelte  List.svelte  LoginPage.svelte  auth.js  image.js
front/tools/extract_image_sprite/: run.py  spirte_map.json
inventory/: Cargo.toml
inventory/src/: back.rs  inventory.rs  item.rs  main.rs  player.rs
player/: package.json  player.js  server.js
