[package]
name = "inventory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres= {version = "0.19.3", features = ["with-serde_json-1"] }
rocket = "0.5.0-rc.2"